--- a/config/settings.yml
+++ b/config/settings.yml
@@ -17,6 +17,7 @@ defaults: &defaults
   preview_sensitive_media: false
   noindex: false
   theme: 'system'
+  use_blurhash: true
   trends: true
   trends_as_landing_page: true
   trendable_by_default: false
